styles/globals.css
/* ... */
/* stopping silly sass highlighting */
.icons-sprite,
.icons-facebook-16,
.btn-sign-in i.icon-fb-white,
.icons-facebook-24,
[class*=btn-signin].btn-signin-facebook .icon,
.icons-twitter-16,
.btn-sign-in i.icon-tw-white,
.icons-twitter-24,
[class*=btn-signin].btn-signin-twitter .icon {
  background-image: url(/images/icons-sprite.png);
  background-repeat: no-repeat;
}

.icons-facebook-16, .btn-sign-in i.icon-fb-white {
  background-position: 0 0;
  width: 16px;
  height: 16px;
}

.icons-facebook-24, [class*=btn-signin].btn-signin-facebook .icon {
  background-position: 0 -36px;
  width: 24px;
  height: 24px;
}

.icons-twitter-16, .btn-sign-in i.icon-tw-white {
  background-position: 0 -80px;
  width: 16px;
  height: 16px;
}

.icons-twitter-24, [class*=btn-signin].btn-signin-twitter .icon {
  background-position: 0 -116px;
  width: 24px;
  height: 24px;
}

section.login-container {
  background: white;
  width: 320px;
  margin: 0 auto;
  font-size: 12px;
  text-align: center;
  position: relative;
  padding: 30px;
}
section.login-container h1 {
  font-size: 20px;
}
section.login-container .quiet {
  margin-top: 20px;
}

[class*=btn-signin] {
  display: block;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  border: 1px solid rgba(20, 20, 20, 0.2);
  width: 230px;
  color: white;
  background: #ccc;
  overflow: hidden;
  margin: 10px auto;
  -webkit-box-shadow: -2px -2px 7px rgba(20, 20, 20, 0.1) inset;
  box-shadow: -2px -2px 7px rgba(20, 20, 20, 0.1) inset;
  text-align: left;
}
[class*=btn-signin] .icon, [class*=btn-signin] .text {
  background-color: rgba(255, 255, 255, 0);
  -webkit-transition: background-color 0.5s;
  transition: background-color 0.5s;
}
[class*=btn-signin] .icon {
  float: left;
  width: 35px;
  height: 35px;
  border-right: 1px solid rgba(255, 255, 255, 0.2);
  background-repeat: no-repeat;
  background-position: 50% 50%;
}
[class*=btn-signin] .text {
  float: left;
  border-left: 1px solid rgba(20, 20, 20, 0.1);
  padding: 10px 15px;
  font-size: 12px;
  width: 163px;
}
[class*=btn-signin]:hover .icon, [class*=btn-signin]:hover .text {
  background-color: rgba(255, 255, 255, 0.2);
}
[class*=btn-signin].btn-signin-facebook {
  background: #3b5998;
}
[class*=btn-signin].btn-signin-facebook .icon {
  background-position: 5px -30px;
}
[class*=btn-signin].btn-signin-twitter {
  background: #00acee;
}
[class*=btn-signin].btn-signin-twitter .icon {
  background-position: 6px -111px;
}

.shirtBlock, article.shirts div, .sotm .shirt {
  background: rgb(20, 20, 20);
  color: white;
  border: 5px solid white;
  border-bottom: none;
  text-align: right;
}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* Space out content a bit */
body {
  margin: 0;
  background: white;
}

* {
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
}
*.hide {
  display: none;
}

a {
  text-decoration: none;
  color: rgb(20, 20, 20);
  border-bottom: 1px solid rgb(20, 20, 20);
}

input:active, input:focus, select:active, select:focus {
  -webkit-box-shadow: none;
  box-shadow: none;
}

button, .btn-sign-in, a.btn {
  display: inline-block;
  background: green;
  border: none;
  padding: 10px;
  color: white;
  -webkit-border-radius: 3px;
  border-radius: 3px;
}
button.neg, .neg.btn-sign-in, a.neg.btn {
  background: red;
}

.quiet {
  color: rgba(20, 20, 20, 0.3);
}

#lean_overlay {
  position: fixed;
  z-index: 1003;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
  background: #000;
  display: none;
}

.modal {
  border: 5px solid rgb(20, 20, 20);
}
.modal .modal-close {
  position: absolute;
  right: -4px;
  top: -4px;
  display: block;
  font-size: 14px;
  background: rgb(20, 20, 20);
  color: white;
  width: 20px;
  height: 20px;
  line-height: 20px;
  text-align: center;
  border-bottom: none;
}

h1.logo {
  position: absolute;
  top: 5px;
  right: 5px;
  font-size: 1.3em;
  margin: 0;
  width: 100px;
  line-height: 0.85em;
}
h1.logo a {
  border-bottom: none;
}

nav {
  background: rgb(20, 20, 20);
}
nav ul {
  padding: 5px;
  margin: 0;
  overflow: hidden;
}
nav ul li {
  list-style: none;
  float: left;
  margin: 0 5px;
}
nav ul li a {
  border: none;
  display: block;
  padding: 5px;
  background: white;
}

.btn-sign-in {
  background: rgba(20, 20, 20, 0.5);
  position: absolute;
  right: 0;
  margin: 10px 25px 0 0;
  z-index: 9999;
}
.btn-sign-in i {
  display: inline-block;
  width: 16px;
  height: 16px;
  background-repeat: no-repeat;
  margin: 0 0 0 3px;
}
.btn-sign-in i.icon-tw-white {
  background-position: 0 -78px;
}
.btn-sign-in i.icon-fb-white {
  background-position: 0 1px;
}

.user-info {
  float: right;
  margin: 10px 20px 0 0;
  border-bottom: none;
  display: block;
  line-height: 15px;
}
.user-info .avatar {
  width: 30px;
  float: left;
}
.user-info span {
  display: block;
  float: left;
  padding: 8px 10px 0 0;
  font-size: 12px;
}

.container {
  margin-left: 330px;
  padding: 0 10px;
}

header {
  padding: 0 10px;
}
header h1 {
  font-size: 3em;
  line-height: 1em;
  text-align: right;
  margin: 10px 0;
}

section {
  padding: 0 10px;
}
section h2 {
  background: rgba(255, 255, 255, 0.5);
  padding: 10px;
  margin: 5px 0;
}

.creator, body.item .item-display {
  background-size: 700px auto;
  background-position: -220px 0;
  background-repeat: no-repeat;
  height: 1000px;
  width: 500px;
  margin: 0;
  position: fixed;
  top: 10px;
  z-index: -3;
}

.shirt-form {
  display: block;
  position: fixed;
  z-index: 999;
  width: 270px;
  top: 160px;
}
.shirt-form .start {
  color: green;
  border-bottom: 0;
  display: block;
  position: absolute;
  margin-left: 50px;
  margin-top: 9px;
}
.shirt-form .start:after {
  display: inline-block;
  content: "";
  width: 0;
  height: 0;
  border-bottom: 5px solid transparent;
  border-left: 5px solid green;
  border-top: 5px solid transparent;
  height: 0;
  width: 0;
}
/* ... */

